seedboxk8s/applications/plex/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: tortuga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - image: plexinc/pms-docker
          name: plex
          ports:
            - containerPort: 32400
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: plex-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
            - mountPath: /transcode
              name: transcode-tmp
              readOnly: false
            - mountPath: /dev/dri
              name: dev-dri
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: plex-config-pvc
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
        - name: transcode-tmp
          emptyDir: {}
        - name: dev-dri
          hostPath:
            path: /dev/dri
            type: Directory
