seedboxk8s/applications/plex/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: plex
  namespace: tortuga
spec:
  # I think this serviceName must match the name of the Service in the same directory.
  serviceName: plex
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: plex
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plex
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        - image: plexinc/pms-docker:1.43.4.10903-e5521bd8c
          name: pms
          ports:
            - containerPort: 32400
              protocol: TCP
          livenessProbe:
            exec:
              command:
              - pgrep
              - -f
              - /usr/lib/plexmediaserver/Plex Media Server
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - mountPath: /config
              name: plex-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
            - mountPath: /transcode
              name: transcode-tmp
              readOnly: false
            - mountPath: /dev/dri
              name: dev-dri
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: plex-config-pvc
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
        - name: transcode-tmp
          emptyDir: {}
        - name: dev-dri
          hostPath:
            path: /dev/dri
            type: Directory
