seedboxk8s/applications/plex/Service.yaml
apiVersion: v1
kind: Service
metadata:
  # I think this name must match the serviceName specified in the StatefulSet.
  name: plex
  namespace: tortuga
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app.kubernetes.io/name: plex
  ports:
  - port: 32400
    targetPort: 32400
    name: plex
    protocol: TCP
