seedboxk8s/applications/plex/IngressRoute.plex-all-plex32400.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex-all-plex32400
  namespace: tortuga
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale,traefik-localnet
spec:
  entryPoints:
    - plex32400
  routes:
    # - match: Host(`*`)
    - match: Path(`/`)
      kind: Rule
      services:
        - name: plex
          kind: Service
          port: 32400
  tls:
    secretName: younix-dot-us-wildcard-backing-secret
