seedboxk8s/applications/plex/IngressRoute.plex-all-plex64800.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex-all-plex64800
  namespace: tortuga
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale,traefik-localnet
spec:
  entryPoints:
    - plex64800
  routes:
    - match: Host(`*`)
      kind: Rule
      services:
        - name: plex
          kind: Service
          port: 32400
