seedboxk8s/applications/plex/IngressRoute.plex-tailscale-https.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex-tailscale-https
  namespace: tortuga
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Plex
    gethomepage.dev/group: Media
    gethomepage.dev/icon: plex
    gethomepage.dev/href: https://plex.${productionClusterFqdn}
    gethomepage.dev/pod-selector: app.kubernetes.io/name=plex
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: plex
          kind: Service
          port: 32400
  tls:
    secretName: seedbox-wildcard-backing-secret
