seedboxk8s/applications/plex/IngressRoute.plex.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex
  namespace: tortuga
  annotations:
    # kubernetes.io/ingress.class: traefik-localnet,traefik-tailscale
    kubernetes.io/ingress.class: traefik-tailscale
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.${clusterFqdn}`)
      kind: Rule
      services:
        - name: plex
          kind: Service  # not sure if this is needed?
          port: 32400
