seedboxk8s/applications/plex/IngressRouteTCP.03005.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: plex-03005
  namespace: tortuga
  annotations:
    kubernetes.io/ingress.class: traefik-localnet,traefik-tailscale
spec:
  entryPoints:
    - plex-03005-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: plex
          port: 3005
