seedboxk8s/applications/plex/IngressRouteTCP.08324.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: plex-08324
  namespace: tortuga
  annotations:
    kubernetes.io/ingress.class: traefik-localnet,traefik-tailscale
spec:
  entryPoints:
    - plex-08324-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: plex
          port: 8324
