seedboxk8s/applications/plex/IngressRouteTCP.plex-all-plex64800.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: plex-all-plex64800
  namespace: tortuga
spec:
  ingressClassName: traefik-localnet
  entryPoints:
    - plex64800
  routes:
    - match: HostSNI(`*`)
      services:
        - name: plex
          port: 32400
  tls:
    passthrough: true
