seedboxk8s/applications/plex/IngressRouteTCP.plex.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: plex-32400
  namespace: tortuga
  annotations:
    kubernetes.io/ingress.class: traefik-localnet,traefik-tailscale
spec:
  entryPoints:
    - plex-tcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: plex
          port: 32400
