seedboxk8s/applications/plex/IngressRouteUDP.01900.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: plex-01900
  namespace: tortuga
  annotations:
    kubernetes.io/ingress.class: traefik-localnet,traefik-tailscale
spec:
  entryPoints:
    - plex-01900-tcp
  routes:
    - match: Host(`*`)
      services:
        - name: plex
          port: 1900
