seedboxk8s/applications/plex/IngressRouteUDP.05353.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: plex-05353
  namespace: tortuga
  annotations:
    kubernetes.io/ingress.class: traefik-localnet,traefik-tailscale
spec:
  entryPoints:
    - plex-05353-tcp
  routes:
    - match: Host(`*`)
      services:
        - name: plex
          port: 5353
